# STM32_UI_Designer_LVGL

TEST_LCD_TOUCH_4INCH/: .cproject  .mxproject  .project  STM32H750VBTX_FLASH.ld  (+3 more)
TEST_LCD_TOUCH_4INCH/Drivers/UI/: CMakeLists.txt  filelist.txt  project.info  ui.c  ui.h  ui_events.c  ui_events.h
TEST_LCD_TOUCH_4INCH/Drivers/UI/images/: ui_img_1340268884.c  ui_img_1617842459.c  ui_img_back_hand_50dp_e3e3e3_fill0_wght400_grad0_opsz48_png.c  ui_img_center_focus_strong_50dp_e3e3e3_fill0_wght400_grad0_opsz48_png.c  ui_img_dashboard_customize_50dp_e3e3e3_fill0_wght400_grad0_opsz48_png.c  ui_img_data_table_50dp_e3e3e3_fill0_wght400_grad0_opsz48_png.c  ui_img_help_50dp_e3e3e3_fill0_wght400_grad0_opsz48_png.c  ui_img_home_50dp_e3e3e3_fill0_wght400_grad0_opsz48_png.c  ui_img_info_50dp_e3e3e3_fill0_wght400_grad0_opsz48_png.c  ui_img_license_50dp_e3e3e3_fill0_wght400_grad0_opsz48_png.c  ui_img_location_on_50dp_e3e3e3_fill0_wght400_grad0_opsz48_png.c  ui_img_multimodal_hand_eye_50dp_e3e3e3_fill0_wght400_grad0_opsz48_png.c  ui_img_play_circle_50dp_e3e3e3_fill0_wght400_grad0_opsz48_png.c  ui_img_security_50dp_e3e3e3_fill0_wght400_grad0_opsz48_png.c  ui_img_settings_50dp_e3e3e3_fill0_wght400_grad0_opsz48_png.c  ui_img_undo_50dp_e3e3e3_fill0_wght400_grad0_opsz48_png.c
TEST_LCD_TOUCH_4INCH/Drivers/UI/screens/: ui_AutoScreen.c  ui_AutoScreen.h  ui_CalibrationScreen.c  ui_CalibrationScreen.h  ui_InfoScreen.c  ui_InfoScreen.h  ui_MainMenu.c  ui_MainMenu.h  ui_ManualScreen.c  ui_ManualScreen.h  ui_SettingScreen.c  ui_SettingScreen.h  ui_ViewDataScreen.c  ui_ViewDataScreen.h
(+1165 files in other folders)
